# ROS2-PX4-Precision-Landing-and-Gamepad-Control

./: .gitignore  README.md  README.tr.md  data.yaml  install_opencv.sh
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: CPoints.msg
precision_landing/: CMakeLists.txt  package.xml
precision_landing/include/uav_core/: PID.hpp  uav.hpp
precision_landing/launch/: joy_controller.py  online_async_launch.py  visualize.launch.py
precision_landing/models/x500_all_sensors/: model.config  model.sdf
precision_landing/scripts/: camera.py  visualizer.py
precision_landing/src/: flight_controller.cpp
